// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart renders correctly when chart is hovered 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-jo4t4s-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
}

.cache-exvtnx-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4f0599;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-92hyda-Bullet-animationFlash {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #4F1A81;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-yil21r-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 500;
}

.cache-1j2xuq2-Line {
  border-bottom: 1px solid #e6e9f0;
  position: relative;
  width: 100%;
}

.cache-1p5biq8-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.cache-1y6i3uw-Value {
  margin-left: 6px;
  font-weight: 500;
}

.cache-1klfns5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-15v4bha-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-1dejm4g-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-3.560568890002063e-14,93L-2.8484551120016506e-14,74.4A74.4,74.4,0,1,0,4.555686092828154e-15,-74.4Z"
                fill="#4F1A81"
                opacity="1"
                stroke="rgb(55, 18, 90)"
                stroke-width="0"
                style="cursor: pointer;"
              />
              <path
                d="M-3.560568890002063e-14,93A93,93,0,1,1,6.551677018400607e-14,-93L5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-2.8484551120016506e-14,74.4Z"
                fill="#F4306C"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
        <div
          style="pointer-events: none; position: absolute; z-index: 10; top: 0px; left: 0px; transform: translate(0px, 0px);"
        >
          <span />
        </div>
      </div>
    </div>
    <ul
      class="cache-jo4t4s-List enw618e8"
    >
      <div
        aria-describedby="chart-legend-compute"
        tabindex="0"
      >
        <li
          class="cache-exvtnx-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-compute"
          />
          <div
            class="cache-92hyda-Bullet-animationFlash enw618e6"
            color="#4F1A81"
            id="chart-legend-compute"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-yil21r-Text enw618e3"
            >
              Compute
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1p5biq8-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-1y6i3uw-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-gpu"
        tabindex="0"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-gpu"
          />
          <div
            class="cache-15v4bha-Bullet enw618e6"
            color="#F4306C"
            id="chart-legend-gpu"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly when legend is focused 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-jo4t4s-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
}

.cache-exvtnx-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4f0599;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-92hyda-Bullet-animationFlash {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #4F1A81;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-yil21r-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 500;
}

.cache-1j2xuq2-Line {
  border-bottom: 1px solid #e6e9f0;
  position: relative;
  width: 100%;
}

.cache-1p5biq8-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.cache-1y6i3uw-Value {
  margin-left: 6px;
  font-weight: 500;
}

.cache-1klfns5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-15v4bha-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-1dejm4g-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-3.560568890002063e-14,93L-2.8484551120016506e-14,74.4A74.4,74.4,0,1,0,4.555686092828154e-15,-74.4Z"
                fill="#4F1A81"
                opacity="1"
                stroke="rgb(55, 18, 90)"
                stroke-width="0"
              />
              <path
                d="M-3.560568890002063e-14,93A93,93,0,1,1,6.551677018400607e-14,-93L5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-2.8484551120016506e-14,74.4Z"
                fill="#F4306C"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-jo4t4s-List enw618e8"
    >
      <div
        aria-describedby="chart-legend-compute"
        tabindex="0"
      >
        <li
          class="cache-exvtnx-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-compute"
          />
          <div
            class="cache-92hyda-Bullet-animationFlash enw618e6"
            color="#4F1A81"
            id="chart-legend-compute"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-yil21r-Text enw618e3"
            >
              Compute
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1p5biq8-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-1y6i3uw-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-gpu"
        tabindex="0"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-gpu"
          />
          <div
            class="cache-15v4bha-Bullet enw618e6"
            color="#F4306C"
            id="chart-legend-gpu"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly when legend is hovered 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-jo4t4s-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
}

.cache-exvtnx-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4f0599;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-92hyda-Bullet-animationFlash {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #4F1A81;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-yil21r-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 500;
}

.cache-1j2xuq2-Line {
  border-bottom: 1px solid #e6e9f0;
  position: relative;
  width: 100%;
}

.cache-1p5biq8-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.cache-1y6i3uw-Value {
  margin-left: 6px;
  font-weight: 500;
}

.cache-1klfns5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-15v4bha-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-1dejm4g-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-3.560568890002063e-14,93L-2.8484551120016506e-14,74.4A74.4,74.4,0,1,0,4.555686092828154e-15,-74.4Z"
                fill="#4F1A81"
                opacity="1"
                stroke="rgb(55, 18, 90)"
                stroke-width="0"
              />
              <path
                d="M-3.560568890002063e-14,93A93,93,0,1,1,6.551677018400607e-14,-93L5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-2.8484551120016506e-14,74.4Z"
                fill="#F4306C"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-jo4t4s-List enw618e8"
    >
      <div
        aria-describedby="chart-legend-compute"
        tabindex="0"
      >
        <li
          class="cache-exvtnx-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-compute"
          />
          <div
            class="cache-92hyda-Bullet-animationFlash enw618e6"
            color="#4F1A81"
            id="chart-legend-compute"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-yil21r-Text enw618e3"
            >
              Compute
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1p5biq8-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-1y6i3uw-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-gpu"
        tabindex="0"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-gpu"
          />
          <div
            class="cache-15v4bha-Bullet enw618e6"
            color="#F4306C"
            id="chart-legend-gpu"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with data 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-3.560568890002063e-14,93L-2.8484551120016506e-14,74.4A74.4,74.4,0,1,0,4.555686092828154e-15,-74.4Z"
                fill="#4F1A81"
                opacity="1"
                stroke="rgb(55, 18, 90)"
                stroke-width="0"
              />
              <path
                d="M-3.560568890002063e-14,93A93,93,0,1,1,6.551677018400607e-14,-93L5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-2.8484551120016506e-14,74.4Z"
                fill="#F4306C"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with data and content 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-1rvbv3u-StyledContent {
  display: inline-block;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  font-size: 25px;
  line-height: 100px;
  height: 100px;
  width: 100px;
  margin: auto;
  text-align: center;
  vertical-align: middle;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-3.560568890002063e-14,93L-2.8484551120016506e-14,74.4A74.4,74.4,0,1,0,4.555686092828154e-15,-74.4Z"
                fill="#4F1A81"
                opacity="1"
                stroke="rgb(55, 18, 90)"
                stroke-width="0"
              />
              <path
                d="M-3.560568890002063e-14,93A93,93,0,1,1,6.551677018400607e-14,-93L5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-2.8484551120016506e-14,74.4Z"
                fill="#F4306C"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="cache-1rvbv3u-StyledContent e17m7c930"
      >
        Test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with detailed legend 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-jo4t4s-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
}

.cache-1klfns5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-e5jh6x-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #4F1A81;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-1j2xuq2-Line {
  border-bottom: 1px solid #e6e9f0;
  position: relative;
  width: 100%;
}

.cache-1dejm4g-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

.cache-15v4bha-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-3.560568890002063e-14,93L-2.8484551120016506e-14,74.4A74.4,74.4,0,1,0,4.555686092828154e-15,-74.4Z"
                fill="#4F1A81"
                opacity="1"
                stroke="rgb(55, 18, 90)"
                stroke-width="0"
              />
              <path
                d="M-3.560568890002063e-14,93A93,93,0,1,1,6.551677018400607e-14,-93L5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-2.8484551120016506e-14,74.4Z"
                fill="#F4306C"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-jo4t4s-List enw618e8"
    >
      <div
        aria-describedby="chart-legend-compute"
        tabindex="0"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-compute"
          />
          <div
            class="cache-e5jh6x-Bullet enw618e6"
            color="#4F1A81"
            id="chart-legend-compute"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              Compute
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-gpu"
        tabindex="0"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-gpu"
          />
          <div
            class="cache-15v4bha-Bullet enw618e6"
            color="#F4306C"
            id="chart-legend-gpu"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with detailed legend and discount 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-jo4t4s-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
}

.cache-1klfns5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-15v4bha-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-1j2xuq2-Line {
  border-bottom: 1px solid #e6e9f0;
  position: relative;
  width: 100%;
}

.cache-1dejm4g-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
            <pattern
              height="5"
              id="lines.bg.#F4306C"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="#F4306C"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-5.694607616035192e-15,93A93,93,0,1,1,5.694607616035192e-15,-93M5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-5.241341614720486e-14,74.4A74.4,74.4,0,1,0,5.241341614720486e-14,-74.4Z"
                fill="url(#lines.bg.#F4306C)"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-jo4t4s-List enw618e8"
    >
      <div
        aria-describedby="chart-legend-discount"
        tabindex="0"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-discount"
          />
          <div
            class="cache-15v4bha-Bullet enw618e6"
            color="#F4306C"
            id="chart-legend-discount"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with empty legend placeholder 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-16mg1da-EmptyLegend {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 20px;
}

.cache-p2wm6i-StyledText-bodyA-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-5.694607616035192e-15,93A93,93,0,1,1,5.694607616035192e-15,-93M5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-5.241341614720486e-14,74.4A74.4,74.4,0,1,0,5.241341614720486e-14,-74.4Z"
                fill="#f6f6f8"
                opacity="1"
                stroke="rgb(172, 172, 174)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="cache-16mg1da-EmptyLegend e17m7c931"
    >
      <p
        class="e1g1zfwd0 cache-p2wm6i-StyledText-bodyA-variantStyles"
      >
        I am a legend
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with legend 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-jo4t4s-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
}

.cache-1klfns5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-e5jh6x-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #4F1A81;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-1j2xuq2-Line {
  border-bottom: 1px solid #e6e9f0;
  position: relative;
  width: 100%;
}

.cache-1dejm4g-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

.cache-15v4bha-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-3.560568890002063e-14,93L-2.8484551120016506e-14,74.4A74.4,74.4,0,1,0,4.555686092828154e-15,-74.4Z"
                fill="#4F1A81"
                opacity="1"
                stroke="rgb(55, 18, 90)"
                stroke-width="0"
              />
              <path
                d="M-3.560568890002063e-14,93A93,93,0,1,1,6.551677018400607e-14,-93L5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-2.8484551120016506e-14,74.4Z"
                fill="#F4306C"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-jo4t4s-List enw618e8"
    >
      <div
        aria-describedby="chart-legend-compute"
        tabindex="0"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-compute"
          />
          <div
            class="cache-e5jh6x-Bullet enw618e6"
            color="#4F1A81"
            id="chart-legend-compute"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              Compute
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-gpu"
        tabindex="0"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-gpu"
          />
          <div
            class="cache-15v4bha-Bullet enw618e6"
            color="#F4306C"
            id="chart-legend-gpu"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with no props 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-5.694607616035192e-15,93A93,93,0,1,1,5.694607616035192e-15,-93M5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-5.241341614720486e-14,74.4A74.4,74.4,0,1,0,5.241341614720486e-14,-74.4Z"
                fill="#f6f6f8"
                opacity="1"
                stroke="rgb(172, 172, 174)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
